Changing build systemt o allow for checking or apache software presence

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for perl module Test::Instance::Apache
 
 {{$NEXT}}
 
+  - Changed to MakeMaker (through dzil MakeMaker::Awesome plugin) to allow for
+    checking of httpd|apache|apache2 presence before install.
+  - Corrected 'Runbox' company name to 'Runbox Solutions AS'
+
 0.001  2016-07-05 13:39:09 BST
 
   - Initial release, with development sponsored by Runbox (http://www.runbox.com)
